--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "solid-js": "^1.5.1"
   }
 }
